v8_monolithic = true
is_debug = false
is_clang = false
v8_target_cpu = "x64"
target_cpu = "x64"
v8_enable_backtrace = true
v8_optimized_debug = false
is_component_build = false
v8_static_library = true
use_custom_libcxx = false
use_custom_libcxx_for_host = false
treat_warnings_as_errors = false
v8_enable_i18n_support = false
v8_use_external_startup_data = false
v8_enable_pointer_compression = true

defines = [
  "V8_COMPRESS_POINTERS",
  "V8_ENABLE_SANDBOX"
]